Reader: Fix no comments missing white space (#8434)

--- a/client/blocks/comments/style.scss
+++ b/client/blocks/comments/style.scss
@@ -2,7 +2,7 @@
 .comments__comment-list {
 	border-top: 1px solid lighten( $gray, 20% );
 	clear: both;
-	margin: 36px 0 40px;
+	margin: 36px 0 0;
 	padding-top: 11px;
 }
 
